2009-02-27  Guillem Jover  <guillem@debian.org>

	* lib/fields.c (f_boolean): Return if value is an empty string.

2009-02-26  Chris Coulson  <chrisccoulson@googlemail.com>,
            Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_HEADERS): Add 'sys/syscall.h'.
	* man/start-stop-daemon.8: Document new option --iosched.
	* utils/start-stop-daemon.c [HAVE_SYS_SYSCALL_H]: Include
	<sys/syscall.h>.
	(HAVE_IOPRIO_SET) [SYS_ioprio_set, linux]: New macro.
	(IOPRIO_CLASS_NONE, IOPRIO_CLASS_RT): New anonymous enum.
	(IOPRIO_CLASS_BE, IOPRIO_CLASS_IDLE): Likewise.
	(IOPRIO_WHO_PROCESS, IOPRIO_WHO_PGRP, IOPRIO_WHO_USER): Likewise.
	(IOPRIO_CLASS_SHIFT, IOPRIO_PRIO_VALUE, IO_SCHED_PRIO_MIN)
	(IO_SCHED_PRIO_MAX): New macros.
	(io_sched): New variable.
	(do_help): Document --iosched.
	(ioprio_set) [HAVE_IOPRIO_SET]: New function.
	(parse_io_schedule, set_io_schedule): Likewise.
	(parse_options): Add 'iosched' to longopts. Add 'I:' to getopt_long
	call. Handle 'I' as getopt_long return value. Call parse_io_schedule
	if io_schedule_str is not NULL.
	(main): Print io_sched values if --test is used. Call set_io_schedule
	if io_sched is not NULL.

2009-02-26  Romain Francoise  <rfrancoise@debian.org>,
            Guillem Jover  <guillem@debian.org>

	* src/filesdb.c: Include 'progress.h'.
	(ensure_allinstfiles_available): Call progress_init instead of
	directly printing. Call progress_step if needing to print on each
	package iteration. And call progress_done if needing to print when
	finished.

2009-02-26  Romain Francoise  <rfrancoise@debian.org>,
            Guillem Jover  <guillem@debian.org>

	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'progress.h' and
	'progress.c'.
	* lib/progress.h: New file.
	* lib/progress.c: Likewise.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Add new option --log to
	log to another file than /var/log/dpkg.log.
	* man/update-alternatives.8: Document the new option.