@@ -1,5 +1,10 @@
 2009-02-27  Guillem Jover  <guillem@debian.org>
 
+	* lib/fields.c (f_boolean): Use PKGPFIELD to assign to the correct
+	member instead of hardcoding to the essential member.
+
+2009-02-27  Guillem Jover  <guillem@debian.org>
+
 	* lib/fields.c (f_boolean): Return if value is an empty string.
 
 2009-02-26  Chris Coulson  <chrisccoulson@googlemail.com>,
